added js for board array, win combos and set interval

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
     <h1>Sam's Simon Challenge</h1>
     <div class="circle-container">
-        <div class="simon-button">
-            <button id="red-button">1</button>
+        <div class="simon-button" id="red-button">
+            <button id="btn1" class="hide">1</button>
         </div>
-        <div class="simon-button">
-            <button id="green-button">2</button>
+        <div class="simon-button" id="green-button">
+            <button id="btn2" class="hide">2</button>
         </div>
-        <div class="simon-button">
-            <button id="blue-button">3</button>
+        <div class="simon-button" id="blue-button">
+            <button id="btn3" class="hide" >3</button>
         </div>
-        <div class="simon-button">
-            <button id="yellow-button">4</button>
+        <div class="simon-button" id="yellow-button">
+            <button id="btn4" class="hide">4</button>
         </div>
     </div>
     <div id="button-area">
