playing around with js to get random sequence of win plays

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sam's Simon Challenge</title>
 </head>
 <body>
-    <h1>Sam's Simon Challenge</h1>
+    <h1>A Different Kind of Simon</h1>
     <div class="circle-container">
         <div class="simon-button" id="red-button">
             <button id="btn1" class="hide">1</button>
