js - pull random index value and set to buttons, updated mvp and game rules

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
     <div id="button-area">
         <button id="start-button">START GAME!</button>
+        <button id="clear-array">clear array</button>
     </div>
  <script src="./main.js"></script>
 </body>
