used js to sequence through computer choices and fixed errors with player choices

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <h1>A Different Kind of Simon</h1>
     <div class="circle-container">
         <div class="simon-button" id="red-button">
-            <button id="btn1" class="hide">1</button>
+            <button id="btn1" class="hide allBtns">1</button>
         </div>
         <div class="simon-button" id="green-button">
-            <button id="btn2" class="hide">2</button>
+            <button id="btn2" class="hide allBtns">2</button>
         </div>
         <div class="simon-button" id="blue-button">
-            <button id="btn3" class="hide">3</button>
+            <button id="btn3" class="hide allBtns">3</button>
         </div>
         <div class="simon-button" id="yellow-button">
-            <button id="btn4" class="hide">4</button>
+            <button id="btn4" class="hide allBtns">4</button>
         </div>
     </div>
     <div id="button-area">
-        <button id="start-button">START GAME!</button>
+        <button id="sequence-button">GET SEQUENCE!</button>
         <button id="clear-array">clear array</button>
     </div>
  <script src="./main.js"></script>
