used js to time out button after player clicks & started getting win lose text into html per players win/loss

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <button id="sequence-button">GET SEQUENCE!</button>
         <button id="clear-array">clear array</button>
     </div>
+    <div id="resultText"></div>
  <script src="./main.js"></script>
 </body>
 </html>
