add new text to css and updated readme

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <title>Sam's Simon Challenge</title>
 </head>
 <body>
-    <h1>A Different Kind of Simon</h1>
+    <h1>Sam Says...</h1>
+    <div class="game-rules">To start the game press the "GET SEQUENCE" button. The computer will give you a sequence of four numbers. After the computer is done you need repeat the same sequence to get 10 points. If you can get 100 points of win 10 rounds you win!</div>
+    <div id="player-score">Your Score: </div>
     <div class="circle-container">
         <div class="simon-button" id="red-button">
             <button id="btn1" class="hide allBtns">1</button>
