changed colors and font styles on css, got array to reset on computer choice array

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <title>Sam's Simon Challenge</title>
 </head>
 <body>
-    <h1>Sam Says...</h1>
+    <h1 style="transform: scale(0.9); display: inline-block;"><span>SAM</span>
+        <span>SAYS...</span></h1>
     <div class="game-rules">To start the game press the "GET SEQUENCE" button. The computer will give you a sequence of four numbers. After the computer is done you need repeat the same sequence to get 10 points. If you can get 100 points of win 10 rounds you win!</div>
     <div id="player-score">Your Score: </div>
     <div class="circle-container">
