added styling to page - working on get game play to function

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <h1 style="transform: scale(0.9); display: inline-block;"><span>SAM</span>
         <span>SAYS...</span></h1>
-    <div class="game-rules">To start the game press the "GET SEQUENCE" button. The computer will give you a sequence of four numbers. After the computer is done you need repeat the same sequence to get 10 points. If you can get 100 points of win 10 rounds you win!</div>
-    <div id="player-score">Your Score: </div>
+    <div class="game-rules">To start the game press the "GET SEQUENCE" button. The computer will give you a sequence of four numbers. After the computer is done you need repeat the same sequence to get 10 points. If you can get 100 points you win!</div>
+    <div id="player-score">Your Score: 0 </div>
     <div class="circle-container">
         <div class="simon-button" id="red-button">
             <button id="btn1" class="hide allBtns">1</button>
@@ -30,7 +30,6 @@
     </div>
     <div id="button-area">
         <button id="sequence-button">GET SEQUENCE!</button>
-        <button id="clear-array">clear array</button>
     </div>
     <div id="resultText"></div>
  <script src="./main.js"></script>
