made the sequence button the round resetto start everything again

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
     <h1 style="transform: scale(0.9); display: inline-block;"><span>SAM</span>
         <span>SAYS...</span></h1>
-    <div class="game-rules">To start the game press the "GET SEQUENCE" button. The computer will give you a sequence of four numbers. After the computer is done you need repeat the same sequence to get 10 points. If you can get 100 points you win!</div>
+    <div class="game-rules">
+        <p class="rules">To start the game press the "GET SEQUENCE" button. The computer will give you a sequence of four numbers. After the computer is done you need repeat the same sequence to get 10 points. To iniate next round you must push "GET SEQUENCE" button again. </p>
+        <p>If you can get 100 points you win!</p>
+        </div>
     <p>Player Score</p>
     <div id="player-score">0</div>
     <div class="circle-container">
