got button style to work and added media query

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         </div>
     <p>Player Score</p>
     <div id="player-score">0</div>
+    <div class="text-area">
+        <div id="resultText"></div>
+    </div>
     <div class="circle-container">
         <div class="simon-button" id="red-button">
             <button id="btn1" class="hide allBtns">1</button>
@@ -34,8 +37,8 @@
     </div>
     <div id="button-area">
         <button id="sequence-button">GET SEQUENCE!</button>
+        <button id="reset-button">RESET</button>
     </div>
-    <div id="resultText"></div>
  <script src="./main.js"></script>
 </body>
 </html>
