--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     </div>
     <div class="circle-container">
         <div class="simon-button" id="red-button">
-            <button id="btn1" class="hide allBtns">1</button>
+            <button id="btn1" class="hide allBtns"><img src="./Emoji Images/angry-emoji.png" alt=""></button>
         </div>
         <div class="simon-button" id="green-button">
-            <button id="btn2" class="hide allBtns">2</button>
+            <button id="btn2" class="hide allBtns"><img src="./Emoji Images/wink-emoji.png" alt=""></button>
         </div>
         <div class="simon-button" id="blue-button">
-            <button id="btn3" class="hide allBtns">3</button>
+            <button id="btn3" class="hide allBtns"><img src="./Emoji Images/love-emoji.png" alt=""></button>
         </div>
         <div class="simon-button" id="yellow-button">
-            <button id="btn4" class="hide allBtns">4</button>
+            <button id="btn4" class="hide allBtns"><img src="./Emoji Images/kiss emoji.png" alt=""></button>
         </div>
     </div>
     
