changed out the button images back to numbers & added background image

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
         <p class="rules">To start the game press the "GET SEQUENCE" button. The computer will give you a sequence of four numbers. After the computer is done you need repeat the same sequence to get 10 points. To iniate next round you must push "GET SEQUENCE" button again. </p>
         <p>If you can get 100 points you win!</p>
         </div>
-    <p>Player Score</p>
-    <div id="player-score">0</div>
+        <div id="player-score">
+            <p>Player Score</p>
+            <div>0</div>
+        </div>
+    
     <div class="text-area">
         <div id="resultText"></div>
     </div>
@@ -27,16 +30,16 @@
     </div>
     <div class="circle-container">
         <div class="simon-button" id="red-button">
-            <button id="btn1" class="hide allBtns"><img src="./Emoji Images/angry-emoji.png" alt=""></button>
+            <button id="btn1" class="hide allBtns">1</button>
         </div>
         <div class="simon-button" id="green-button">
-            <button id="btn2" class="hide allBtns"><img src="./Emoji Images/wink-emoji.png" alt=""></button>
+            <button id="btn2" class="hide allBtns">2</button>
         </div>
         <div class="simon-button" id="blue-button">
-            <button id="btn3" class="hide allBtns"><img src="./Emoji Images/love-emoji.png" alt=""></button>
+            <button id="btn3" class="hide allBtns">3</button>
         </div>
         <div class="simon-button" id="yellow-button">
-            <button id="btn4" class="hide allBtns"><img src="./Emoji Images/kiss emoji.png" alt=""></button>
+            <button id="btn4" class="hide allBtns">4</button>
         </div>
     </div>
     
